Updates swagger with password routes
