# src/modules/users/infra/http/controllers/ResetPasswordController.ts
@@ -1,0 +1,20 @@
+// index, show, create, update, delete
+
+import { Request, Response } from 'express';
+
+import { container } from 'tsyringe';
+import ResetPasswordService from '@modules/users/services/ResetPasswordService';
+
+export default class ForgotPasswordController {
+  public async create(request: Request, response: Response): Promise<Response> {
+    const { password, token } = request.body;
+    const resetPassword = container.resolve(ResetPasswordService);
+
+    await resetPassword.execute({
+      token,
+      password,
+    });
+
+    return response.status(204).json();
+  }
+}
