# src/shared/infra/http/routes/index.ts
@@ -6,9 +6,11 @@ import personsRouter from '@modules/persons/infra/http/routes/persons.routes';
 import householdsRouter from '@modules/households/infra/http/routes/households.routes';
 import addressesRouter from '@modules/households/infra/http/routes/addresses.routes';
 import familyMembersRouter from '@modules/persons/infra/http/routes/familyMembers.routes';
+import passwordRouter from '@modules/users/infra/http/routes/password.routes';
 
 const routes = Router();
 
+routes.use('/password', passwordRouter);
 routes.use('/person', personsRouter);
 routes.use('/household', householdsRouter);
 routes.use('/address', addressesRouter);
